updated Search for people feature
