# MoviesApi.Swagger/moviesApi_swagger.yaml
@@ -283,6 +283,22 @@ paths:
         404:
           description: Person not found
           
+  '/trending/persons':
+    get:
+      tags:
+        - persons
+      operationId: GetTrendingPeople
+      description: Get a list of trending people in the last time frame
+      responses:
+        200:
+          description: Returns list of persons
+          schema:
+            $ref: "#/definitions/PersonsResponseDTO"
+        401:
+          description: Unauthorized
+        404:
+          description: Person not found
+          
   '/movie/{movieId}/credits':
     get:
       tags:
